# rosneuro_visualizer

./: CMakeLists.txt  README  README.md  package.xml
include/rosneuro_visualizer/: Buffer.hpp  DataPanel.hpp  DataPlot.hpp  DataThread.hpp  EigenBuffer.hpp  FilterButterworth.hpp  FilterCar.hpp  FilterReference.hpp  MainWindow.hpp  NeuroPanel.hpp  Palette.hpp  ScopePanel.hpp  TemporalPlot.hpp
include/rosneuro_visualizer/old/: NeuroDataManagement.hpp
include/rosneuro_visualizer/v0/: Buffer.hpp  FilterButterworth.hpp  Palette.hpp
include/rosneuro_visualizer/v1/: EEGThread.hpp  EXGThread.hpp  NeuroPanel2.hpp  NeuroThread.hpp
launch/: neuroviz.launch
src/: Buffer.cpp  DataPlot.cpp  DataThread.cpp  EigenBuffer.cpp  FilterCar.cpp  FilterReference.cpp  MainWindow.cpp  NeuroPanel.cpp  ScopePanel.cpp  TemporalPlot.cpp  neuroviz.cpp  ui_dialog_info.h  ui_neuroviz.h  ui_neuroviz_dialog_info.h  ui_neuroviz_timescope.h  ui_panel.h
src/old/: DataPanel.cpp  NeuroDataManagement.cpp
src/v0/: Buffer.cpp  DataThread.cpp  EigenBuffer.cpp  FilterButterworth.cpp  FilterReference.cpp  NeuroPanel.cpp  Palette.cpp
src/v1/: EEGThread.cpp  EXGThread.cpp  NeuroThread.cpp  ScopePanel2.cpp
test/: TestDataThread.cpp  TestEigenBuffer.cpp  TestFilterButterworth.cpp  TestFilterCar.cpp  TestFilterReference.cpp  TestMainWindow.cpp  TestNeuroPanel.cpp  TestPalette.cpp  TestScopePanel.cpp  TestTemporalPlot.cpp
ui/: dialog_info.ui  neuroviz.ui  neuroviz_timescope.ui  panel.ui
