<?xml version="1.0"?>
<package format="2">
  <name>rosneuro_visualizer</name>
  <version>1.0.1</version>
  <description>ROSNEURO visualizer package to visualize NeuroFrame</description>
  <author email="luca.tonin@dei.unipd.it">Luca Tonin</author>
  <maintainer email="luca.tonin@dei.unipd.it">Luca Tonin</maintainer>

  <license>GPLv3</license>

 <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>
  <depend>eigen</depend>

  <depend>rosneuro_data</depend>
  <depend>rosneuro_msgs</depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>librtfilter</depend>
  
  <depend>libqt5core</depend>
  <depend>libqt5gui</depend>
  <depend>libqt5widgets</depend>
  <depend>libqt5printsupport</depend>
  <depend>QCustomPlot</depend>


</package>
